--- a/module-1/package.json
+++ b/module-1/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "task1": "nodemon task1.js",
-    "task2": "nodemon task2.js",
-    "task3": "nodemon --exec babel-node  task3.js"
+    "task1": "npm run task3 && nodemon task3/task1.js",
+    "task2": "npm run task3 && nodemon task3/task2.js",
+    "task3": "rimraf task3/ && babel ./ --out-dir task3/ --ignore ./node_modules,./.babelrc,./package-lock.json,./package.json,./node_mentoring_t1_2_input_example.txt --copy-files"
   },
   "author": "Vitalii Namys",
   "license": "ISC",
@@ -13,10 +13,9 @@
     "csvtojson": "^2.0.10"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/node": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
-    "nodemon": "^1.19.4"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.19.4",
+    "rimraf": "^3.0.0"
   }
 }
