--- a/module-2/package.json
+++ b/module-2/package.json
@@ -19,10 +19,17 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
+    "@types/express": "^4.17.2",
+    "@types/node": "^12.12.17",
+    "@types/uuid": "^3.4.6",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.0",
     "typescript": "^3.7.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "uuid": "^3.3.3"
   }
 }
