--- a/module-3/.babelrc
+++ b/module-3/.babelrc
@@ -1,6 +1,17 @@
 {
     "presets": [
-        "@babel/env",
+        [
+            "@babel/env",
+            {
+                "targets": {
+                    "node": "current"
+                }
+            }
+        ],
         "@babel/typescript"
+    ],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime"
     ]
 }
