--- a/module-3/package.json
+++ b/module-3/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/server.js",
     "dev": "nodemon --watch src --ext .ts",
-    "build": "npm run build:types && npm run build:js",
+    "build": "npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "rimraf dist/ && babel src --out-dir dist --extensions .ts",
     "type-check": "tsc --noEmit",
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
     "@types/bluebird": "^3.5.29",
@@ -24,6 +26,7 @@
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
     "@types/node": "^12.12.17",
+    "@types/sequelize": "^4.28.8",
     "@types/uuid": "^3.4.6",
     "@types/validator": "^12.0.1",
     "babel-eslint": "^10.0.3",
@@ -33,6 +36,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "@hapi/joi": "^16.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
