--- a/module-6/package.json
+++ b/module-6/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
     "@types/bluebird": "^3.5.29",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
@@ -38,6 +39,7 @@
   "dependencies": {
     "@babel/runtime": "^7.8.3",
     "@hapi/joi": "^16.1.8",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.17.1",
