--- a/module-6/package.json
+++ b/module-6/package.json
@@ -26,6 +26,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^12.12.17",
     "@types/sequelize": "^4.28.8",
     "@types/uuid": "^3.4.6",
@@ -42,6 +43,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
