--- a/module-7/package.json
+++ b/module-7/package.json
@@ -10,7 +10,10 @@
     "build:js": "rimraf dist/ && babel src --out-dir dist --extensions .ts",
     "type-check": "tsc --noEmit",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "author": "Vitalii Namys",
   "license": "ISC",
@@ -26,6 +29,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.4",
+    "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^12.12.17",
     "@types/sequelize": "^4.28.8",
@@ -33,8 +37,10 @@
     "@types/validator": "^12.0.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.0",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.7.3"
   },
   "dependencies": {
